objects/Proactive_CS__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Proactive Conversion Values</description>
    <fields>
        <fullName>Name_Type__c</fullName>
        <label>Name Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_Attendance_Status__c</fullName>
        <label>Proactive Attendance Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_Attendance_Type__c</fullName>
        <label>Proactive Attendance Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_PG_Relationship__c</fullName>
        <description>P/G Proactive conversion Value</description>
        <inlineHelpText>P/G Proactive conversion Value</inlineHelpText>
        <label>Proactive P/G Relationship</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_SPED_School__c</fullName>
        <label>Proactive SPED School</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_Student_Entry__c</fullName>
        <label>Proactive Student Entry</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_Student_Exit__c</fullName>
        <label>Proactive Student Exit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_TitleI__c</fullName>
        <label>Proactive TitleI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Attendance_Status__c</fullName>
        <label>SF Attendance Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Attendance_Type__c</fullName>
        <label>SF Attendance Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_PG_Relationship__c</fullName>
        <description>SF Value for PG Relationship</description>
        <inlineHelpText>SF Value for PG Relationship</inlineHelpText>
        <label>SF P/G Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_SPED_School__c</fullName>
        <label>SF SPED School</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Student_Entry__c</fullName>
        <label>SF Student Entry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Student_Exit__c</fullName>
        <label>SF Student Exit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_TitleI__c</fullName>
        <label>SF TitleI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Exit_Type__c</fullName>
        <label>Student Exit Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Proactive Attendance/Demographics</label>
</CustomObject>